# web-development-project

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  app.db  app.py  config.py  docker-compose.yml  entrypoint.sh  extensions.py  flake.nix  gunicorn_config.py  package.json  pyproject.toml  requirements.txt  tests.py
api/: __init__.py  api_key.py  auth.py  market.py  messaging.py  models.py  user.py
api/src/: __init__.py  market.py
client/: Dockerfile  package-lock.json  package.json  tailwind.config.js
client/src/: App.css  App.tsx  api.ts  index.css  index.tsx  model.ts  utils.ts
client/src/components/: Card.tsx  Chart.tsx  Dashboard.tsx  Header.tsx  Login.tsx  Register.tsx  Trade.tsx  UserOverview.tsx  tailwindClassNames.ts
helm/: values.yaml
migrations/versions/: 4c61a3d81fb4_default_admin_user.py  5377b93239a9_.py  a5b05b38c859_add_default_market.py  b21782277b21_.py  bc598246d09d_init.py  fe36a3aa4619_.py
src/hello_world/: __init__.py
