[project]
name = "web-development-project"
version = "0.1.0"
description = "Web development project for coursework in 'Fundamentals of Web Engineering'"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-cors>=5.0.0",
    "flask-migrate>=4.0.7",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.0.3",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    # "types-flask>=1.1.6",
    # "types-flask-cors>=5.0.0.20240902",
    # "types-flask-migrate>=4.0.0.20240311",
    # "types-sqlalchemy>=1.4.53.38",
    # "types-werkzeug>=1.0.9",
    # "mypy>=1.13.0",
    # "pylsp-mypy>=0.6.9",
    # "python-lsp-server>=1.12.0",
]

[tool.setuptools]
packages = ["api", "migrations"]

# [tool.pylsp-mypy]
# enabled = true
# live_mode = true
# strict = true
# exclude = ["tests/*"]

[tool.uv]
dev-dependencies = [
    # "types-flask>=1.1.6",
    # "types-flask-cors>=5.0.0.20240902",
    # "types-flask-migrate>=4.0.0.20240311",
    # "types-sqlalchemy>=1.4.53.38",
    # "types-werkzeug>=1.0.9",
    "basedpyright>=1.22.0",
    # "mypy>=1.13.0",
    # "pylsp-mypy>=0.6.9",
    # "python-lsp-server[all]>=1.12.0",
]

# [dependency-groups]
# dev = [
# ]

# this is only for demonstrating how to deploy something as an executable, which is not relevant for development right now
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [project.scripts]
# hello = "hello_world:hello"

# [tool.hatch.build.targets.wheel]
# packages = ["src/hello_world"]

