[project]
name = "web-development-project"
version = "0.1.0"
description = "Web development project for coursework in 'Fundamentals of Web Engineering'"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-cors>=5.0.0",
    "flask-migrate>=4.0.7",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.0.3",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
]

[tool.setuptools]
packages = ["api", "migrations"]

[tool.uv]
dev-dependencies = [
    "basedpyright>=1.22.0", # could also be installed in flake
]

# [dependency-groups]
# dev = [
# ]

# this is only for demonstrating how to deploy something as an executable, which is not relevant for development right now
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [project.scripts]
# hello = "hello_world:hello"

# [tool.hatch.build.targets.wheel]
# packages = ["src/hello_world"]

